crates/analyzer/tests/snapshots/errors__invalid_generic_string.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, &src)"

---
error: Numeric generic type parameter expected
  ┌─ compile_errors/invalid_generic_string.fe:2:14
  │
2 │   val: String<foo>
  │              ^^^^^ invalid type parameter
  │
  = Example: String<100>


